# helium_framework

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs
src/: action.rs  hotkeys.rs  lib.rs  menu.rs  notifications.rs  tab_system.rs  utils.rs  widgets.rs
src/utils/: identifier.rs
src/widgets/: dock_buttons.rs
